name:                wai-streams
version:             0.1.0.0
synopsis:            A port of wai-pipes for the io-streams ecosystem
description:         io-streams for WAI
homepage:            http://github.com/dmjio/io-streams-wai
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2014
category:            Web, IO-Stream 
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.IO.Streams.Wai
  hs-source-dirs:      src
  build-depends:       base == 4.*
                     , wai ==3.0.*
                     , io-streams
                     , transformers
                     , bytestring
                     , http-types
                     , blaze-builder
  default-language:    Haskell2010